--- a/vim/.vim/c-support/templates/c.statements.template
+++ b/vim/.vim/c-support/templates/c.statements.template
@@ -1,62 +1,64 @@
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.do-while ==
+== Statements.do while == map:sd, shortcut:d  ==
 do {
 <SPLIT>} while ( <CURSOR> );				/* -----  end do-while  ----- */
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.for ==
+== Statements.for == map:sf, shortcut:o  ==
 for ( <CURSOR>; ; )
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.for-block ==
-for ( <CURSOR>; ; ) {
+§
+§ The names INIT, CONDITION, INCREMENT, and 'for block' are used by the main
+§ plugin plugin/c.vim . Please do not change.
+§
+== Statements.for block == map:sfo, shortcut:r  ==
+|DefaultMacro( 'CONDITION', '{+CONDITION+}' )|
+|DefaultMacro( 'INCREMENT', '{+INCREMENT+}' )|
+for ( |INIT|<CURSOR>; |CONDITION|; |INCREMENT| ) {
 <SPLIT>}
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.if ==
+== Statements.range-based for == map:sfr, shortcut:a  ==
+for ( <CURSOR>: <-EXPRESSION-> ){
+<SPLIT>}
+== Statements.if == map:si, shortcut:i  ==
 if ( <CURSOR> )
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.if-block ==
+== Statements.if block == map:sif, shortcut:f  ==
 if ( <CURSOR> ) {
-<SPLIT>}
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.if-else ==
+<SPLIT><-IF_PART->
+}
+== Statements.if else == map:sie, shortcut:e  ==
 if ( <CURSOR> )
 <SPLIT>else
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.if-block-else ==
+== Statements.if block else == map:sife, shortcut:l  ==
 if ( <CURSOR> ) {
-<SPLIT>} else {
+<SPLIT><-IF_PART->
 }
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.while ==
+else {
+<-ELSE_PART->
+}
+== Statements.else block == map:se, shortcut:e  ==
+else {
+<CURSOR><SPLIT>
+}
+== Statements.while == map:sw, shortcut:w  ==
 while ( <CURSOR> )
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.while-block ==
+== Statements.while block == map:swh, shortcut:h  ==
 while ( <CURSOR> ) {
 <SPLIT>}
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.switch ==
+== Statements.switch == map:ss, shortcut:s  ==
 switch ( <CURSOR> ) {
-	case 1:	
+	case <-LABEL->:	
 		<SPLIT>break;
 
-	case 2:	
+	case <-LABEL->:	
 		break;
 
-	case 3:	
-		break;
-
-	case 4:	
+	case <-LABEL->:	
 		break;
 
 	default:	
 		break;
 }				/* -----  end switch  ----- */
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.case ==
+== Statements.case == map:sc, shortcut:c  ==
 case <CURSOR>:	
 break;
 
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== statements.block ==
-{<CURSOR>
-<SPLIT>}
-$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== Statements.block == map:sb, shortcut:b  ==
+{
+<CURSOR><SPLIT>
+}
